--- a/index.html
+++ b/index.html
@@ -2,54 +2,91 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Betânia & Lucas — 12 . 12 . 2025</title>
-<link rel="icon" type="image/png" href="image/4.png">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Parisienne&family=Playfair+Display:wght@400;600;700&family=Raleway:wght@400;600;700&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Confirmação de Presença | Betânia & Lucas</title>
 
+  <link rel="icon" type="image/png" href="image/4.png">
   <link rel="stylesheet" href="css/style.css">
+
+  <!-- Estilos do popup -->
+  <style>
+    .popup-overlay {
+      position: fixed;
+      inset: 0;
+      background: rgba(0,0,0,.6);
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      z-index: 9999;
+    }
+    .popup-content {
+      background: #fff;
+      padding: 2rem 2.5rem;
+      border-radius: 16px;
+      text-align: center;
+      max-width: 420px;
+      margin: 0 1rem;
+      box-shadow: 0 10px 30px rgba(0,0,0,.2);
+      animation: fadeInUp .35s ease;
+    }
+    @keyframes fadeInUp {
+      from { transform: translateY(30px); opacity: 0 }
+      to   { transform: translateY(0);  opacity: 1 }
+    }
+    .visually-hidden {
+      position: absolute;
+      left: -9999px;
+      width: 1px;
+      height: 1px;
+      overflow: hidden;
+    }
+  </style>
 </head>
-<body>
 
-  <!-- Header / Navegação superior -->
- <header class="site-header">
-  <nav class="topnav" aria-label="Principal">
-    <a href="#home" class="nav-link">Home</a>
-    <a href="#infos" class="nav-link">Informações importantes</a>
-    <a href="#cerimonia" class="nav-link">Cerimônia</a>
-    <a href="#recepcao" class="nav-link">Recepção</a>
-    <a href="confirm.html" class="nav-link">Confirme sua presença</a>
-    <a href="https://www.mercadolivre.com.br/presentes/lucas-e-betania-hotzn"
-       class="nav-link"
-       target="_blank"
-       rel="noopener noreferrer">Lista de presentes</a>
-  </nav>
-</header>
+<body class="confirm-page">
 
+  <main class="confirm-container">
+    <section class="confirm-card">
+      <h1 class="confirm-title">Confirme sua presença</h1>
 
-  <!-- Hero grande com foto + assinatura + nomes/data -->
-  <section id="home" class="hero hero--large" aria-label="Foto do casal">
-    <img src="image/foto horizontal 1.png" alt="" class="hero-img" loading="eager">
-    <div class="hero-gradient" aria-hidden="true"></div>
+      <form id="formConfirmacao" novalidate>
+        <label for="buscaNome" class="form-label">Digite seu nome</label>
 
-    <div class="hero-inner">
-      <img src="image/4.png" alt="" class="hero-signature" width="420" height="120">
-      <h1 class="hero-title">BETÂNIA E LUCAS</h1>
-      <p class="hero-date">12 . 12 . 2025</p>
-    </div>
-  </section>
+        <div class="busca-row">
+          <input id="buscaNome" class="busca-input" type="text"
+                 placeholder="Ex.: Lucas" autocomplete="off" />
+          <button id="btnBuscar" type="button" class="btn btn-primary">
+            Buscar
+          </button>
+        </div>
 
-  <main>
+        <ul id="resultadoBusca" class="resultado-lista"></ul>
 
-  
+        <div id="grupoArea" class="grupo-area" hidden>
+          <p class="grupo-hint">Marque quem do seu grupo irá comparecer:</p>
+          <div id="grupoLista" class="grupo-lista"></div>
+        </div>
 
+        <button id="btnEnviar" type="submit"
+                class="btn btn-primary" disabled>
+          Enviar confirmação
+        </button>
+
+        <p id="statusMsg" class="status-msg"></p>
+      </form>
+    </section>
   </main>
 
+  <!-- Popup -->
+  <div id="popupSucesso" class="popup-overlay" hidden>
+    <div class="popup-content">
+      <h2>🎉 Presença confirmada com sucesso!</h2>
+      <p>Obrigado por confirmar.Te espero na minha festa!</p>
+      <button id="btnOkPopup" class="btn btn-primary">OK</button>
+    </div>
+  </div>
+
   <script src="js/script.js"></script>
+
 </body>
 </html>
-
-
-
