Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
         <div class="busca-row">
           <input id="buscaNome" class="busca-input" type="text"
-                 placeholder="Ex.: Lucas" autocomplete="off" />
+                 placeholder="Ex.: Carlos" autocomplete="off" />
           <button id="btnBuscar" type="button" class="btn btn-primary">
             Buscar
           </button>
@@ -90,3 +90,4 @@
 
 </body>
 </html>
+
